--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-PORT=3000
+PORT=4000
+DATABASE_PORT=1774
+DATABASE_USER=mydas
+DATABASE_PASSWORD=eplus.vn123
+DATABASE_DB=mydas_affiliate
+SECRET=@EPLUS.VN123!@#
