--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=4000
 DATABASE_PORT=1774
 DATABASE_USER=mydas
-DATABASE_PASSWORD=eplus.vn123
-DATABASE_DB=mydas_affiliate
+DATABASE_PASSWORD=
+DATABASE_DB=
 SECRET=@EPLUS.VN123!@#
