--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=4000
-DATABASE_PORT=1774
-DATABASE_USER=mydas
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=3306
+DATABASE_USER=root
 DATABASE_PASSWORD=
-DATABASE_DB=
+DATABASE_DB=nestjs_blog
 SECRET=@EPLUS.VN123!@#
